app/Kubernetes/APP_Deploy/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  selector:
    app: nodejs-app
  ports:
    - port: 3000
      targetPort: 3000
      
  type: LoadBalancer
