app/Kubernetes/APP_Deploy/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:    
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nodejs-app
            port:
              number: 3000
